---
source: crates/kirin-derive-dialect/src/builder/tests.rs
expression: "case!\n{\n    #[kirin(fn = new, type_lattice = L)] struct TestStruct<T: CompileTimeValue\n    + Typeof<L>, L: TypeLattice>\n    {\n        #[kirin(into)] value: T, #[kirin(type = value.type_of())] result:\n        ResultValue, #[kirin(into)] input_ssa: SSAValue,\n        #[kirin(default = std::marker::PhantomData)] marker:\n        std::marker::PhantomData<L>,\n    }\n}"
---
#[automatically_derived]
impl<T: CompileTimeValue + Typeof<L>, L: TypeLattice> TestStruct<T, L> {
    pub fn new<Lang>(
        context: &mut ::kirin::ir::Context<Lang>,
        value: impl Into<T>,
        input_ssa: impl Into<SSAValue>,
    ) -> test_struct_build_result::TestStruct
    where
        Lang: ::kirin::ir::Dialect + From<TestStruct<T, L>>,
        Lang::TypeLattice: From<L>,
    {
        let teststruct_statement_id = context.statement_arena().next_id();
        let value: T = value.into();
        let input_ssa: SSAValue = input_ssa.into();
        let marker: std::marker::PhantomData<L> = std::marker::PhantomData;
        let result: ResultValue = context
            .ssa()
            .kind(SSAKind::Result(teststruct_statement_id, 0usize))
            .ty(Lang::TypeLattice::from(value.type_of()))
            .new()
            .into();
        context
            .statement()
            .definition(Self {
                value: value,
                result: result,
                input_ssa: input_ssa,
                marker: marker,
            })
            .new();
        test_struct_build_result::TestStruct {
            id: teststruct_statement_id,
            result,
        }
    }
}
#[automatically_derived]
pub mod test_struct_build_result {
    use kirin::ir::{ResultValue, Statement};
    #[automatically_derived]
    pub struct TestStruct {
        pub id: Statement,
        pub result: ResultValue,
    }
    #[automatically_derived]
    impl From<TestStruct> for Statement {
        fn from(value: TestStruct) -> Self {
            value.id
        }
    }
}
